# redisraft

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CompilerChecks.cmake  ConfigureChecks.cmake  LICENSE  LICENSE.txt  Makefile  README.md  TODO  TODO.md  atomic.h  cluster.c  cmocka-config.cmake.in  commands.c  common.c  config.c  connection.c  crc16.c  crc16.h  hiredis_redismodule.h  join.c  libuv.supp  log.c  node.c  node_addr.c  proxy.c  queue.h  raft.c  rafter.c  redismodule.h  redisraft.c  redisraft.h  redisraft.supp  run.sh  serialization.c  snapshot.c  sort.c  threadpool.c  (+1 more)
.github/codespell/: config.txt  skiplist.txt
.github/workflows/: ci.yml  daily.yml  jepsen.yml  redis-suite.yml
.run/: Python tests for integration.test_sharding.test_shard_group_persistence.run.xml  Python tests for integration.test_sharding.test_shard_group_replace.run.xml  Python tests for integration.test_snapshots.test_stale_log_trim.run.xml  Python tests for test_config.test_ignored_commands.run.xml  Python tests for test_multi.test_multi_exec_invalid_use.run.xml
benchmark/: benchmark.json  redisraft_cluster.sh
coverity/: coverity_assert_model.c
doc/: CMakeLists.txt  MULTI.md
docs/: Clustering.md  Deployment.md  Development.md  ExternalSharding.md  Flow.puml  Introduction.md  Sharding.md  TLS.md  TOC.md  Using.md
example/: CMakeLists.txt
example/mock/uptime/: uptime.c
include/: CMakeLists.txt  raft.h  raft_log.h  raft_private.h  raft_types.h
jepsen/: README.md  project.clj
jepsen/aws/: README.md  main.tf  output.tf  variables.tf
jepsen/aws/scripts/: install_control.sh  install_node.sh
jepsen/docker/: README.md  build_dist.sh  docker-compose.yml  genkeys.sh
jepsen/docker/control/: Dockerfile  entrypoint.sh  init.sh
jepsen/docker/node/: Dockerfile  entrypoint.sh
jepsen/src/jepsen/: redisraft.clj
licenses/: RSALv2.txt
src/: .clang-format  blocked.c  clientstate.c  cluster.c  commands.c  common.c  config.c  config.h  connection.c  connection.h  crc16.h  entrycache.c  entrycache.h  file.c  file.h  fsync.c  fsync.h  hiredis_redismodule.h  join.c  log.c  log.h  log_utils.c  log_utils.h  meta.c  meta.h  metadata.c  metadata.h  migrate.c  multi.c  node.c  node.h  node_addr.c  node_addr.h  proxy.c  queue.h  raft.c  raft_log.c  raft_node.c  raft_server.c  raft_server_properties.c  (+13 more)
tests/: dut_premble.h  helpers.h  linked_list_queue.c  log_fuzzer.py  main.c  mock_send_functions.c  monitor.sh  raft_cffi.py  raft_cffi_builder.py  requirements.txt  test_float_macros.c  test_groups.c  test_log.c  test_log_impl.c  test_serialization.c  test_server.c  test_snapshotting.c  test_util.c  virtraft2.py
tests/integration/: TestBasicFuzzer.py  TestBasicRaft.py  TestConfig.py  TestFuzzing.py  TestLog.py  TestPersistedFuzzer.py  TestSnapshots.py  conftest.py  fixtures.py  logging.ini  pytest.ini  raftlog.py  requirements.txt  sandbox.py  test_blocking.py  test_cluster.py  test_config.py  test_elle.py  test_fuzzing.py  test_log.py  test_membership.py  test_migrate.py  test_multi.py  test_pubsub.py  test_random.py  test_sanity.py  test_sharding.py  test_snapshots.py  test_tools.py  workload.py
tests/integration/modules/: hellomodule.c
tests/redis-suite/: run.sh  skip.txt
tests/unit/: .clang-format  dut_premble.h  main.c  test.h  test_file.c  test_log.c  test_serialization.c  test_util.c
utils/: gen-test-certs.sh
utils/create-cluster/: create-cluster
utils/create-shard-groups/: create-shard-groups
utils/deploy-aws/: README.md  ansible.cfg  create_instances.sh  hosts.tpl  main.tf  output.tf  sample.tfvars  variables.tf
utils/deploy-aws/ansible/: site.yml
utils/deploy-aws/ansible/roles/common/tasks/: main.yml
utils/deploy-aws/ansible/roles/common/vars/: main.yml
utils/deploy-aws/ansible/roles/control/defaults/: main.yml
utils/deploy-aws/ansible/roles/control/tasks/: cluster.yml  install.yml  main.yml  memtier_benchmark.yml
utils/deploy-aws/ansible/roles/control/templates/: cluster.sh.j2
utils/deploy-aws/ansible/roles/control/vars/: main.yml
utils/deploy-aws/ansible/roles/node/defaults/: main.yml
utils/deploy-aws/ansible/roles/node/handlers/: main.yml
utils/deploy-aws/ansible/roles/node/tasks/: config.yml  install.yml
utils/deploy-aws/ansible/roles/node/templates/: redis_conf.j2  systemd_redisraft.j2  systemd_redisraft_target.j2
utils/deploy-aws/ansible/roles/node/vars/: main.yml
